--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "firebase-admin": "^9.6.0",
     "nodemon": "^2.0.7"
   }
 }
